2006-06-19 nowel(S2Dao.PHP5-1.1.0-RC5)

    * add: extenstion/dataset
        - S2Dao_DataColumnImpl.class.php
        - S2Dao_DataRowImpl.class.php
        - S2Dao_DataTableImpl.class.php
    * fix: PhingTaskで正常に実行されない不具合を修正しました。

2006-06-18  yonekawa(S2Dao.PHP5-1.1.0-RC5)

    * fix: S2Dao_PagerSupportにて、session_startの重複エラーが起きるのを修正しました。[DAOPHP-2]

2006-06-17 nowel(S2Dao.PHP5-1.1.0-RC5)

    * fix: コメントアノテーション時に正しくアノテーションクラスが読み込めない不具合を修正しました。
    * fix: S2Dao_ClassLoaderが不要なパッケージを参照していたのを修正しました。
    * move: context パッケージを移動しました。
        - /dao/context/S2Dao_CommandContextImpl.class.php to /dao/impl/S2Dao_CommandContextImpl.class.php
    * move: procedure パッケージを移動しました。
        - /dao/util/procedure to /dao/dbms/proceudre
    * add: DBMataData パッケージの追加
        - /dao/dbms/dbmeta/S2Dao_DBMetaDataFactory.class.php
        - /dao/dbms/dbmeta/S2Dao_FirebirdDBMetaData.class.php
        - /dao/dbms/dbmeta/S2Dao_OracleDBMetaData.class.php
        - /dao/dbms/dbmeta/S2Dao_PostgreSQLDBMetaData.class.php
        - /dao/dbms/dbmeta/S2Dao_SQLiteDBMataData.class.php
        - /dao/dbms/dbmeta/S2Dao_StandardDBMetaData.class.php
    * add: ResultSet パッケージの追加、ResultSet クラスの移動
        - /dao/impl/S2Dao_AbstractBeanMetaDataResultSetHandler.class.php
            to /dao/resultset/S2Dao_AbstractBeanMetaDataResultSetHandler.class.php
        - /dao/impl/S2Dao_BeanArrayMetaDataResultSetHandler.class.php
            to /dao/resultset/S2Dao_BeanArrayMetaDataResultSetHandler.class.php
        - /dao/impl/S2Dao_BeanListMetaDataResultSetHandler.class.php
            to /dao/resultset/S2Dao_BeanListMetaDataResultSetHandler.class.php
        - /dao/impl/S2Dao_BeanMetaDataResultSetHandler.class.php
            to /dao/resultset/S2Dao_BeanMetaDataResultSetHandler.class.php
        - /dao/resultset/S2Dao_BeanJsonMetaDataResultSetHandler.class.php
        - /dao/resultset/S2Dao_BeanYamlMetaDataResultSetHandler.class.php

2006-06-16 nowel(S2Dao.PHP5-1.1.0-RC4)
