@@ -108,11 +108,11 @@ class S2DaoClassLoader {
         'S2Dao_DbmsManager' => '/dao/dbms/S2Dao_DbmsManager.class.php',
         'S2Dao_DB2' => '/dao/dbms/S2Dao_DB2.class.php',
         'S2Dao_Firebird' => '/dao/dbms/S2Dao_Firebird.class.php',
-        'S2Dao_MSSQLServer' => '/dao/dbms/S2Dao_MSSQLServer.class.php',
         'S2Dao_MySQL' => '/dao/dbms/S2Dao_MySQL.class.php',
         'S2Dao_Oracle' => '/dao/dbms/S2Dao_Oracle.class.php',
         'S2Dao_PostgreSQL' => '/dao/dbms/S2Dao_PostgreSQL.class.php',
         'S2Dao_SQLite' => '/dao/dbms/S2Dao_SQLite.class.php',
+        'S2Dao_Sybase' => '/dao/dbms/S2Dao_Sybase.class.php',
         'S2Dao_Standard' => '/dao/dbms/S2Dao_Standard.class.php',
         'S2Dao_MySQLProcedureMetaDataImpl' => '/dao/dbms/procedure/S2Dao_MySQLProcedureMetaDataImpl.class.php',
         'S2Dao_OracleProcedureMetaDataImpl' => '/dao/dbms/procedure/S2Dao_OracleProcedureMetaDataImpl.class.php',
@@ -124,8 +124,9 @@ class S2DaoClassLoader {
         'S2Dao_DBMetaDataFactory' => '/dao/dbms/dbmeta/S2Dao_DBMetaDataFactory.class.php',
         'S2Dao_FirebirdDBMetaData' => '/dao/dbms/dbmeta/S2Dao_FirebirdDBMetaData.class.php',
         'S2Dao_OracleDBMetaData' => '/dao/dbms/dbmeta/S2Dao_OracleDBMetaData.class.php',
-        'S2Dao_SQLiteDBMataData' => '/dao/dbms/dbmeta/S2Dao_SQLiteDBMataData.class.php',
         'S2Dao_PostgreSQLDBMetaData' => '/dao/dbms/dbmeta/S2Dao_PostgreSQLDBMetaData.class.php',
+        'S2Dao_SQLiteDBMetaData' => '/dao/dbms/dbmeta/S2Dao_SQLiteDBMetaData.class.php',
+        'S2Dao_SybaseDBMetaData' => '/dao/dbms/dbmeta/S2Dao_SybaseDBMetaData.class.php',
         'S2Dao_StandardDBMetaData' => '/dao/dbms/dbmeta/S2Dao_StandardDBMetaData.class.php',
         'S2Dao_ColumnNotFoundRuntimeException' => '/dao/exception/S2Dao_ColumnNotFoundRuntimeException.class.php',
         'S2Dao_DaoNotFoundRuntimeException' => '/dao/exception/S2Dao_DaoNotFoundRuntimeException.class.php',
