@@ -4,5 +4,5 @@ pgsql="S2Dao_PostgreSQL"
 sqlite="S2Dao_SQLite"
 firebird="S2Dao_Firebird"
 oci="S2Dao_Oracle"
-mssql="S2Dao_MSSQLServer"
+dblib="S2Dao_Sybase"
 odbc="S2Dao_DB2"
