@@ -1,3 +1,7 @@
+2006-06-22 nowel(S2Dao.PHP5-1.1.0-RC5)
+
+    * add: S2Dao_Sybase
+
 2006-06-19 nowel(S2Dao.PHP5-1.1.0-RC5)
 
     * add: extenstion/dataset
